Fix: Pagamento layer refactored