@@ -1,22 +1,21 @@
 package com.mindmatch.pagamento.service;
 
-import com.mindmatch.pagamento.dto.FormDTO;
 import com.mindmatch.pagamento.dto.PagamentoDTO;
+import com.mindmatch.pagamento.entities.Cartao;
+import com.mindmatch.pagamento.entities.Cliente;
 import com.mindmatch.pagamento.entities.Pagamento;
 import com.mindmatch.pagamento.repositories.PagamentoRepository;
-import com.mindmatch.pagamento.repositories.specification.PagamentoSpecification;
 import com.mindmatch.pagamento.service.exceptions.DatabaseException;
 import com.mindmatch.pagamento.service.exceptions.ResourceNotFoundException;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PagamentoService {
@@ -28,7 +27,19 @@ public class PagamentoService {
     @Transactional(readOnly=true)
     public List<PagamentoDTO> getAll(){
         List<Pagamento>pagamentos = repository.findAll();
-        return pagamentos.stream().map(PagamentoDTO::new).collect(Collectors.toList());
+        return pagamentos.stream().map(PagamentoDTO::new)
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<PagamentoDTO> findByClienteId(Long id) {
+        try {
+            return repository.findByClienteId(id)
+                    .stream().map(PagamentoDTO::new)
+                    .toList();
+        } catch (EntityNotFoundException e) {
+            throw new ResourceNotFoundException("Recurso não encontrado. ID: "+ id);
+        }
     }
 
     @Transactional(readOnly=true)
@@ -37,23 +48,11 @@ public class PagamentoService {
         return new PagamentoDTO(entity);
     }
 
-    @Transactional(readOnly = true)
-    public List<PagamentoDTO> getByForm(FormDTO formDTO) {
-        if(formDTO.getNome() == null && formDTO.getNumeroDoCartao() == null) {
-            throw new DatabaseException("Ao menos um dos campos deve ser preenchido");
-        }
-
-        Specification<Pagamento> specification = PagamentoSpecification.formFiltro(formDTO);
-
-        return repository.findAll(specification)
-                .stream().map(PagamentoDTO::new)
-                .toList();
-    }
-
     @Transactional
     public PagamentoDTO createPagamento(PagamentoDTO dto){
         Pagamento entity = new Pagamento();
         copyDtoToEntity(dto, entity);
+        entity.setData(LocalDateTime.now());
         entity = repository.save(entity);
         return new PagamentoDTO(entity);
     }
@@ -84,12 +83,15 @@ public class PagamentoService {
 
     private void copyDtoToEntity(PagamentoDTO dto, Pagamento entity) {
         entity.setValor(dto.getValor());
-        entity.setNome(dto.getNome());
-    entity.setNumeroDoCartao(dto.getNumeroDoCartao());
-    entity.setValidade(dto.getValidade());
-    entity.setCodigoDeSeguranca(dto.getCodigoDeSeguranca());
-    entity.setFormaDePagamentoId(dto.getFormaDePagamentoId());
-    entity.setTransactionDate(dto.getTransactionDate());
-    entity.setDescricao(dto.getDescricao());
+        entity.setDescricao(dto.getDescricao());
+        entity.setData(dto.getDataTransacao());
+
+        Cliente cliente = new Cliente();
+        cliente.setId(dto.getClienteId());
+        Cartao cartao = new Cartao();
+        cartao.setId(dto.getCartaoId());
+
+        entity.setCliente(cliente);
+        entity.setCartao(cartao);
     }
 }
